--- a/.docker/nginx/conf.d/backend.conf
+++ b/.docker/nginx/conf.d/backend.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      [::]:80;
-    #server_name backend.demo.test;
+    server_name backend.demo.test;
     root        /var/www/backend/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
