--- a/.docker/nginx/conf.d/phpmyadmin.conf
+++ b/.docker/nginx/conf.d/phpmyadmin.conf
@@ -1,7 +1,7 @@
 server {
     listen      8081;
     listen      [::]:8081;
-    #server_name phpmyadmin.test;
+    server_name phpmyadmin.demo.test
     root        /var/www/phpmyadmin;
     index       index.php;
 
